// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/SignInUpFormWrapper Signin 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-primary"
    >
      Login
    </h1>
    <form
      id="signin-form"
      noValidate={true}
    >
      <h1>
        I'm a signin form
      </h1>
    </form>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <section
      className="text-gray-500"
    >
      Hast du noch keinen Account? 
      <a
        className="text-primary underline transition hover:opacity-60 cursor-pointer focus-offset inline-block"
        href="/signup"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Registriere dich
      </a>
    </section>
    <section
      className="flex flex-col"
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-primary text-white hover:opacity-60"
        form="signin-form"
        type="submit"
        value="Einloggen"
        variant="primary"
      />
    </section>
  </div>
</div>
`;

exports[`Storyshots Forms/SignInUpFormWrapper Signup 1`] = `
<div
  className="max-w-md bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-primary"
    >
      Registrierung
    </h1>
    <form
      id="signup-form"
      noValidate={true}
    >
      <h1>
        I'm a signup form
      </h1>
    </form>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <section
      className="text-gray-500"
    >
      Hast du schon einen Account? 
      <a
        className="text-primary underline transition hover:opacity-60 cursor-pointer focus-offset inline-block"
        href="/signin"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Logge dich ein
      </a>
    </section>
    <section
      className="flex flex-col"
      style={
        Object {
          "justifyContent": "flex-end",
        }
      }
    >
      <input
        className="px-4 py-2 font-sans text-lg transition cursor-pointer focus-offset bg-primary text-white hover:opacity-60"
        form="signup-form"
        type="submit"
        value="Registrieren"
        variant="primary"
      />
    </section>
  </div>
</div>
`;
